--- a/src/styles.css
+++ b/src/styles.css
@@ -38,3 +38,15 @@ body {
   width: 1rem;
   height: 1rem;
 }
+.pointer {
+  cursor: pointer;
+}
+.row .col {
+  padding: 0rem;
+  margin: 0rem;
+}
+.layer-list {
+  border: none;
+  height:50%;
+  overflow:auto;
+}
