--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,5 @@
 body, html {
-  height: 100%;
+  height: 100vh;
 }
 body { 
   background-image: url(./resources/login/bg.jpg) ;
@@ -26,12 +26,16 @@ body {
 /* Map */
 .map {
   position: relative;
-  height: 100vh;
+  height: 90vh;
   overflow: hidden
 }
 
 .row-top {
   margin: 0%;
+}
+nav {
+  height: 10vh;
+  line-height: 10vh;
 }
 /** CLOSE BUTTON **/
 .close__icon {
@@ -47,6 +51,11 @@ body {
 }
 .layer-list {
   border: none;
-  height:50%;
+  height:90vh;
   overflow:auto;
+}
+
+.confirm-email-text {
+  padding-left: 0.75rem;
+  margin-top: 0.75rem;
 }
