Added support for profile management.

--- a/src/styles.css
+++ b/src/styles.css
@@ -62,3 +62,12 @@ nav {
 i.icon-black {
   color: black;
 }
+.no-padding {
+  padding: 0;
+}
+.collapsible-inner {
+  padding-left: 5%;
+}
+.sidenav {
+  background: #004d40
+}
