--- a/src/styles.css
+++ b/src/styles.css
@@ -111,3 +111,47 @@ border-bottom: none;
 td, th {
   padding: 0px;
 }
+.table-comtrolls-wrapper {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding-bottom: 1rem;
+  border-bottom: 1px solid grey;
+}
+.table-controll-title {
+  margin: 0;
+}
+.results-table {
+  padding: 1rem 1rem !important;
+}
+.tr-green {
+  background-color: rgba(242, 242, 242, 0.5) !important;
+}
+i.icon-grey {
+  color: #688a5a;
+}
+.scrollbar-hidden {
+  overflow-x: hidden
+}
+::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.1);
+  border-radius: 10px;
+  background-color: #689f38;
+  -webkit-border-radius: 10px;
+  -moz-border-radius: 10px;
+  -ms-border-radius: 10px;
+  -o-border-radius: 10px;
+}
+
+::-webkit-scrollbar {
+  width: 10px;
+  height: 10px;
+  background-color: transparent;
+  display: block !important;
+}
+
+::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, .1);
+  background-color: #33691e;
+}
