finished tool button functionallity and updated the identify.js to accept whole button object and look after it when displaying the results table. Draw interaction is now activated directly in basemap.js and supports changing geometries asssigned to different tool buttons. Started working on the zonal statistics tool functionallity.

--- a/src/styles.css
+++ b/src/styles.css
@@ -127,8 +127,16 @@ td, th {
 .tr-green {
   background-color: rgba(242, 242, 242, 0.5) !important;
 }
+.tr-button {
+  webkit-box-shadow: none;
+  box-shadow: none;
+  background-color: rgba(255, 255, 255, 0) !important;
+}
 i.icon-grey {
   color: #688a5a;
+}
+i.icon-white {
+  color: white;
 }
 .scrollbar-hidden {
   overflow-x: hidden
