Finished the zonal statistics tool by adding the error handling on the back- and frontend. Changed the body background and login background image to Sattilia logo. Added tsChart component and developed the parameters setup frontend. Next is to add a request call and solve the backend scripting for this component. Also need to handle the request by opening new window and displaying the chart with all of its functionalities.

--- a/src/styles.css
+++ b/src/styles.css
@@ -2,15 +2,22 @@ body, html {
   height: 100vh;
 }
 body { 
-  background-image: url(./resources/login/bg.jpg) ;
   background-position: center center;
   background-repeat:  no-repeat;
   background-attachment: fixed;
   background-size:  cover;
-  background-color: #4C7261;
+  background-color: #f2eadf;
 }
 .transparent-title {
   opacity: .6;
+}
+
+.logo-image-scale {
+  transform: scale(0.5);
+}
+
+.logo-row-height {
+height: 5rem;
 }
 .align-center {
   text-align: center;
@@ -162,4 +169,8 @@ i.icon-white {
   border-radius: 10px;
   -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, .1);
   background-color: #33691e;
+}
+
+.tool-options-wrapper {
+  padding: 2rem;
 }
