Completed time series chart request, update, close functionalities. Still to-do is error handling on front- and back end as well as chart download.

--- a/src/styles.css
+++ b/src/styles.css
@@ -174,3 +174,11 @@ i.icon-white {
 .tool-options-wrapper {
   padding: 2rem;
 }
+.ts-chart-pos {
+  height: 30%;
+  background-color: #f2eadf;
+}
+.chart-height {
+  height: 40vh;
+  max-height: 700px;
+}
