Fixed legend sliding together with slider. Legend now resembles the range selected by min-max slider. It is implemented with only minor changes. The calculateBreaks function now creates separate breaks list for legend generation with classes that are out of selected range as empty lists. GenerateLegend function then compares the initial class list and new one. For matching classes the corresponding class colour range is appended to legend and for other classes color range matches background colour. Legend is also little bit taller so this functionality can be more easily observed.

--- a/src/styles.css
+++ b/src/styles.css
@@ -104,10 +104,11 @@ border-bottom: none;
 }
 .colour-box {
   height: 100%;
-  float: right;
+  float: left;
   text-align: left;
   font-size: .8rem;
   color: rgba(0, 0, 0, 0.7);
+  margin-bottom: 1rem;
 }
 .value-box {
   font-size: .8rem;
