Added majority of translations for slovene language.

--- a/src/styles.css
+++ b/src/styles.css
@@ -78,7 +78,7 @@ i.icon-black {
   padding-left: 5%;
 }
 .sidenav {
-  background: #4C7261;
+  background: #33691e;
 }
 .collapsible-header {
   padding: 0rem 1rem;
