--- a/src/styles.css
+++ b/src/styles.css
@@ -41,6 +41,14 @@ height: 5rem;
   margin: 0%;
   height: 10vh;
 }
+
+.logo-margin {
+  margin-left: 3rem;
+}
+
+.side-nav-margin {
+  margin-left: 1rem;
+}
 nav {
   height: 10vh;
   line-height: 10vh;
