--- a/src/styles.css
+++ b/src/styles.css
@@ -6,9 +6,6 @@
   margin-right: 5vh;
 }
 
-
-/* <script>window.addEventListener("load", function(){window.wpcc.init({"border":"thin","corners":"small","colors":{"popup":{"background":"#5c4812","text":"#ffffff","border":"#fde296"},"button":{"background":"#fde296","text":"#000000"}},"position":"top","content":{"message":"We are using cookies!!! ","link":"What cookies?!","button":"I see","href":"http://localhost:8080/#/cookiepolicy"}})});</script> */
-
 .cookie-consent {
   background:  #ef9a9a;
   padding-left: 1%;
@@ -244,3 +241,14 @@ i.icon-white {
   margin-top:1%;
   left: 45%;
 }
+
+.product-icon {
+  margin-right: 1rem;
+  margin-left: 1rem;
+}
+
+.product-info {
+  position: absolute;
+  right: 1rem;
+}
+
