tried to translate the tooltips and fiex some tools urls that were sending requests to wrong url.

--- a/index.ejs
+++ b/index.ejs
@@ -5,6 +5,7 @@
     <title><%- htmlWebpackPlugin.options.metadata.title %></title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <base href="<%- htmlWebpackPlugin.options.metadata.baseUrl %>">
+    <link rel="icon" sizes="180x180" href="bg.ico" type="image/ico">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <!-- imported CSS are concatenated and added automatically -->
   </head>
